--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,7 @@
   "plugins": ["react"],
   "rules": {
     "no-bitwise": 0,
-    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-unused-vars": "warn",
     "react/react-in-jsx-scope": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
