--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hot-toast": "^2.1.1",
     "react-icons": "^4.3.1",
     "react-location": "^3.3.0",
+    "react-location-devtools": "^3.3.0",
     "react-query": "^3.34.7",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.4",
