--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-scripts": "5.0.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "zustand": "^3.6.8"
   },
   "scripts": {
     "start": "react-scripts start",
