Finished Information Form

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-cra-starter",
+  "name": "employee-information-survey",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.22.5",
     "react-hot-toast": "^2.1.1",
     "react-icons": "^4.3.1",
+    "react-intl-tel-input": "^8.2.0",
     "react-location": "^3.3.0",
     "react-location-devtools": "^3.3.0",
     "react-query": "^3.34.7",
@@ -32,7 +33,7 @@
     "zustand": "^3.6.8"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --stats-error-details",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "lint": "eslint \"**/*.{ts,tsx,js,jsx}\"",
@@ -57,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/line-clamp": "^0.3.0",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
