--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
     "react": "^17.0.2",
     "react-date-picker": "^8.3.6",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.4.2",
     "react-hook-form": "^7.22.5",
-    "react-hot-toast": "^2.1.1",
+    "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "react-intl-tel-input": "^8.2.0",
     "react-location": "^3.3.0",
     "react-location-devtools": "^3.3.0",
     "react-query": "^3.34.7",
     "react-scripts": "5.0.0",
+    "react-social-icons": "^5.6.1",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2",
     "yup": "^0.32.11",
