--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 
 ## PRODUCTION Variables 
-# REACT_APP_API_BASE_URL='https://hr-api.kmc.solutions/'
-# REACT_APP_ERP_BASE_URL='https://erp-api.kmc.solutions/api/'
+REACT_APP_API_BASE_URL='https://hr-api.kmc.solutions/'
+REACT_APP_ERP_BASE_URL='https://erp-api.kmc.solutions/api/'
 # MANATAL_BASE_URL='https://api.manatal.com/'
 # GOOGLE_RECAPTCHA_KEy='6Ld_ISsdAAAAAJKOpmsE9EJVuo8oYhUctiJZ8Mg5'
 
 
 ## DEV / STAGING Variables 
-REACT_APP_API_BASE_URL='https://acmkmc.azurewebsites.net/'
-REACT_APP_ERP_BASE_URL='https://erp-kmc.azurewebsites.net/api/'
+# REACT_APP_API_BASE_URL='https://acmkmc.azurewebsites.net/'
+# REACT_APP_ERP_BASE_URL='https://erp-kmc.azurewebsites.net/api/'
 GOOGLE_RECAPTCHA_KEy='6Ld_ISsdAAAAAJKOpmsE9EJVuo8oYhUctiJZ8Mg5'
